welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((n>=1)&&(n<=10)){
  ^